--- a/res/layout/expressiondetail.xml
+++ b/res/layout/expressiondetail.xml
@@ -83,5 +83,11 @@
 				android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="bottom"></Button>
 		</TableRow>
 		
+		<TableRow android:id="@+id/EDTableRow12" android:layout_width="wrap_content"
+			android:layout_height="wrap_content">
+			<Button android:text="Map It" android:id="@+id/ButtonMap"
+				android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="bottom"></Button>
+		</TableRow>
+		
 	</TableLayout>
 </ScrollView>
